feat(seo): add HowTo JSON-LD + UI steps for requesting a quote

--- a/index.html
+++ b/index.html
@@ -165,6 +165,21 @@
             ]
         }
         </script>
+            <script type="application/ld+json">
+            {
+                "@context": "https://schema.org",
+                "@type": "HowTo",
+                "name": "How to request a quote from UX90 Creations",
+                "description": "Simple steps to contact us via WhatsApp or the contact form and receive a proposal.",
+                "supply": ["Project idea", "Contact details"],
+                "tool": ["WhatsApp", "Contact form"],
+                "step": [
+                    {"@type": "HowToStep", "name": "Open WhatsApp", "text": "Click the WhatsApp button to start a chat with our team.", "url": "https://ux90.dev/#whatsapp-btn"},
+                    {"@type": "HowToStep", "name": "Share project details", "text": "Tell us about your business, goals, and timeline (EN/ES)."},
+                    {"@type": "HowToStep", "name": "Get a proposal", "text": "We send a tailored proposal within 24–48 hours."}
+                ]
+            }
+            </script>
 </head>
 <body data-lang="en">
 
@@ -281,6 +296,21 @@
                     <p data-en="Yes, Shopify and WooCommerce with payments, shipping, and SEO setup." data-es="Sí, Shopify y WooCommerce con pagos, envíos y SEO configurado.">Yes, Shopify and WooCommerce with payments, shipping, and SEO setup.</p>
                 </details>
             </div>
+        </div>
+    </section>
+
+    <!-- How To Get a Quote Section -->
+    <section class="about-section">
+        <div class="container">
+            <div class="section-header">
+                <h2 data-en="How to get a quote" data-es="Cómo solicitar una cotización">How to get a quote</h2>
+                <p data-en="Quick and simple steps to start your project." data-es="Pasos rápidos y simples para iniciar tu proyecto.">Quick and simple steps to start your project.</p>
+            </div>
+            <ol class="about-features">
+                <li data-en="Click the WhatsApp button below" data-es="Haz clic en el botón de WhatsApp de abajo">Click the WhatsApp button below</li>
+                <li data-en="Share your goals, budget, and timeline (EN/ES)" data-es="Comparte objetivos, presupuesto y tiempos (EN/ES)">Share your goals, budget, and timeline (EN/ES)</li>
+                <li data-en="Receive a tailored proposal in 24–48h" data-es="Recibe una propuesta a medida en 24–48h">Receive a tailored proposal in 24–48h</li>
+            </ol>
         </div>
     </section>
 
