--- a/index.html
+++ b/index.html
@@ -784,6 +784,9 @@
         <i class="fab fa-whatsapp"></i>
     </a>
 
+    <!-- EmailJS SDK & Config (optional; used if configured) -->
+    <script defer src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script defer src="scripts/emailjs.config.js"></script>
     <!-- JavaScript -->
     <script src="scripts/main.js"></script>
 </body>
