feat(services): add Desktop Apps and UX/UI Design Miami landings with schema FAQ/testimonials; update links and sitemap

--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                             <li data-en="Native Windows Apps" data-es="Apps Nativas Windows">Native Windows Apps</li>
                             <li data-en="System Integration" data-es="Integración de Sistema">System Integration</li>
                         </ul>
-                        <a href="services/mobile-apps-miami.html" class="service-btn" data-en="Learn More" data-es="Saber Más">Learn More</a>
+                        <a href="services/desktop-apps-miami.html" class="service-btn" data-en="Learn More" data-es="Saber Más">Learn More</a>
                     </div>
                 </div>
 
@@ -438,7 +438,7 @@
                             <li data-en="Professional Interface Design" data-es="Design de Interfaz Profesional">Professional Interface Design</li>
                             <li data-en="Miami Business Design Systems" data-es="Sistemas de Design Negocios Miami">Miami Business Design Systems</li>
                         </ul>
-                        <a href="services/ecommerce-miami.html" class="service-btn" data-en="Learn More" data-es="Saber Más">Learn More</a>
+                        <a href="services/ux-ui-design-miami.html" class="service-btn" data-en="Learn More" data-es="Saber Más">Learn More</a>
                     </div>
                 </div>
 
@@ -726,9 +726,9 @@
                     <h4 data-en="Services" data-es="Servicios">Services</h4>
                     <ul>
                         <li><a href="services/web-design-miami.html" data-en="Web Design" data-es="Diseño Web">Web Design</a></li>
-                        <li><a href="#services" data-en="Desktop Apps" data-es="Apps de Escritorio">Desktop Apps</a></li>
-                        <li><a href="#services" data-en="Mobile Apps" data-es="Apps Móviles">Mobile Apps</a></li>
-                        <li><a href="#services" data-en="UX/UI Design" data-es="Diseño UX/UI">UX/UI Design</a></li>
+                        <li><a href="services/desktop-apps-miami.html" data-en="Desktop Apps" data-es="Apps de Escritorio">Desktop Apps</a></li>
+                        <li><a href="services/mobile-apps-miami.html" data-en="Mobile Apps" data-es="Apps Móviles">Mobile Apps</a></li>
+                        <li><a href="services/ux-ui-design-miami.html" data-en="UX/UI Design" data-es="Diseño UX/UI">UX/UI Design</a></li>
                         <li><a href="services/seo-miami.html" data-en="SEO Services" data-es="Servicios SEO">SEO Services</a></li>
                         <li><a href="#services" data-en="E-commerce" data-es="E-commerce">E-commerce</a></li>
                     </ul>
