chore(links): add Related services interlinking blocks across all service landings

--- a/services/ecommerce-miami.html
+++ b/services/ecommerce-miami.html
@@ -187,6 +187,39 @@
       </div>
     </section>
 
+    <section class="services" id="related-services">
+      <div class="section-header">
+        <h2>Related services</h2>
+        <p>Boost your store with complementary services.</p>
+      </div>
+      <div class="services-grid">
+        <div class="service-card">
+          <div class="service-image"><i class="fas fa-search"></i></div>
+          <div class="service-content">
+            <h3>SEO Miami</h3>
+            <p>Collections and product SEO, structured data, and conversion tracking.</p>
+            <a class="service-btn" href="seo-miami.html">Learn More</a>
+          </div>
+        </div>
+        <div class="service-card">
+          <div class="service-image"><i class="fas fa-palette"></i></div>
+          <div class="service-content">
+            <h3>UX/UI Design</h3>
+            <p>Better product discovery and checkout UX with research and prototyping.</p>
+            <a class="service-btn" href="ux-ui-design-miami.html">Learn More</a>
+          </div>
+        </div>
+        <div class="service-card">
+          <div class="service-image"><i class="fas fa-code"></i></div>
+          <div class="service-content">
+            <h3>Web Design Miami</h3>
+            <p>Landing pages and content hubs that feed your store with qualified traffic.</p>
+            <a class="service-btn" href="web-design-miami.html">Learn More</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section class="contact">
       <div class="section-header">
         <h2>Ready to sell?</h2>
