--- a/services/ux-ui-design-miami.html
+++ b/services/ux-ui-design-miami.html
@@ -145,6 +145,39 @@
       </div>
     </section>
 
+    <section class="services" id="related-services">
+      <div class="section-header">
+        <h2>Related services</h2>
+        <p>Design pairs best with these services.</p>
+      </div>
+      <div class="services-grid">
+        <div class="service-card">
+          <div class="service-image"><i class="fas fa-code"></i></div>
+          <div class="service-content">
+            <h3>Web Design Miami</h3>
+            <p>From prototypes to high‑performing websites built to convert.</p>
+            <a class="service-btn" href="web-design-miami.html">Learn More</a>
+          </div>
+        </div>
+        <div class="service-card">
+          <div class="service-image"><i class="fas fa-mobile-alt"></i></div>
+          <div class="service-content">
+            <h3>Mobile Apps Miami</h3>
+            <p>Bring your UX to life on iOS and Android with native or cross‑platform apps.</p>
+            <a class="service-btn" href="mobile-apps-miami.html">Learn More</a>
+          </div>
+        </div>
+        <div class="service-card">
+          <div class="service-image"><i class="fas fa-search"></i></div>
+          <div class="service-content">
+            <h3>SEO Miami</h3>
+            <p>Scale traffic and conversions with a solid on‑page and technical SEO foundation.</p>
+            <a class="service-btn" href="seo-miami.html">Learn More</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section class="contact">
       <div class="section-header">
         <h2>Ready to start?</h2>
