--- a/services/desktop-apps-miami.html
+++ b/services/desktop-apps-miami.html
@@ -167,6 +167,39 @@
       </div>
     </section>
 
+    <section class="services" id="related-services">
+      <div class="section-header">
+        <h2>Related services</h2>
+        <p>Complement your desktop app with these services.</p>
+      </div>
+      <div class="services-grid">
+        <div class="service-card">
+          <div class="service-image"><i class="fas fa-mobile-alt"></i></div>
+          <div class="service-content">
+            <h3>Mobile Apps Miami</h3>
+            <p>Extend your desktop functionality to iOS and Android with native or cross‑platform apps.</p>
+            <a class="service-btn" href="mobile-apps-miami.html">Learn More</a>
+          </div>
+        </div>
+        <div class="service-card">
+          <div class="service-image"><i class="fas fa-palette"></i></div>
+          <div class="service-content">
+            <h3>UX/UI Design</h3>
+            <p>Design systems and flows that keep desktop and mobile experiences consistent.</p>
+            <a class="service-btn" href="ux-ui-design-miami.html">Learn More</a>
+          </div>
+        </div>
+        <div class="service-card">
+          <div class="service-image"><i class="fas fa-code"></i></div>
+          <div class="service-content">
+            <h3>Web Design Miami</h3>
+            <p>Web portals and dashboards that integrate with your desktop application.</p>
+            <a class="service-btn" href="web-design-miami.html">Learn More</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section class="contact">
       <div class="section-header">
         <h2>Ready to start?</h2>
