--- a/services/mobile-apps-miami.html
+++ b/services/mobile-apps-miami.html
@@ -173,6 +173,39 @@
       </div>
     </section>
 
+    <section class="services" id="related-services">
+      <div class="section-header">
+        <h2>Related services</h2>
+        <p>Services that pair well with mobile development.</p>
+      </div>
+      <div class="services-grid">
+        <div class="service-card">
+          <div class="service-image"><i class="fas fa-palette"></i></div>
+          <div class="service-content">
+            <h3>UX/UI Design</h3>
+            <p>Research and design systems to craft intuitive mobile experiences.</p>
+            <a class="service-btn" href="ux-ui-design-miami.html">Learn More</a>
+          </div>
+        </div>
+        <div class="service-card">
+          <div class="service-image"><i class="fas fa-code"></i></div>
+          <div class="service-content">
+            <h3>Web Design Miami</h3>
+            <p>Landing pages and web portals that integrate seamlessly with your app.</p>
+            <a class="service-btn" href="web-design-miami.html">Learn More</a>
+          </div>
+        </div>
+        <div class="service-card">
+          <div class="service-image"><i class="fas fa-search"></i></div>
+          <div class="service-content">
+            <h3>SEO Miami</h3>
+            <p>Organic visibility for your app’s site and content hubs.</p>
+            <a class="service-btn" href="seo-miami.html">Learn More</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section class="contact">
       <div class="section-header">
         <h2>Ready to build?</h2>
