--- a/services/seo-miami.html
+++ b/services/seo-miami.html
@@ -177,6 +177,39 @@
       </div>
     </section>
 
+    <section class="services" id="related-services">
+      <div class="section-header">
+        <h2>Related services</h2>
+        <p>Complement SEO with these services for better results.</p>
+      </div>
+      <div class="services-grid">
+        <div class="service-card">
+          <div class="service-image"><i class="fas fa-code"></i></div>
+          <div class="service-content">
+            <h3>Web Design Miami</h3>
+            <p>Fast, responsive websites built SEO‑first to convert visitors into leads.</p>
+            <a class="service-btn" href="web-design-miami.html">Learn More</a>
+          </div>
+        </div>
+        <div class="service-card">
+          <div class="service-image"><i class="fas fa-palette"></i></div>
+          <div class="service-content">
+            <h3>UX/UI Design</h3>
+            <p>Improve UX and conversion rates with research‑backed design and testing.</p>
+            <a class="service-btn" href="ux-ui-design-miami.html">Learn More</a>
+          </div>
+        </div>
+        <div class="service-card">
+          <div class="service-image"><i class="fas fa-shopping-cart"></i></div>
+          <div class="service-content">
+            <h3>E‑commerce Miami</h3>
+            <p>Shopify & WooCommerce storefronts ready for SEO and analytics.</p>
+            <a class="service-btn" href="ecommerce-miami.html">Learn More</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section class="contact">
       <div class="section-header">
         <h2>Ready to grow?</h2>
