--- a/services/web-design-miami.html
+++ b/services/web-design-miami.html
@@ -191,6 +191,39 @@
       </div>
     </section>
 
+    <section class="services" id="related-services">
+      <div class="section-header">
+        <h2>Related services</h2>
+        <p>Explore more ways we can help your business grow.</p>
+      </div>
+      <div class="services-grid">
+        <div class="service-card">
+          <div class="service-image"><i class="fas fa-search"></i></div>
+          <div class="service-content">
+            <h3>SEO Miami</h3>
+            <p>Improve rankings, local visibility, and conversions with technical and local SEO.</p>
+            <a class="service-btn" href="seo-miami.html">Learn More</a>
+          </div>
+        </div>
+        <div class="service-card">
+          <div class="service-image"><i class="fas fa-shopping-cart"></i></div>
+          <div class="service-content">
+            <h3>E‑commerce Miami</h3>
+            <p>Shopify & WooCommerce stores optimized for conversions and growth.</p>
+            <a class="service-btn" href="ecommerce-miami.html">Learn More</a>
+          </div>
+        </div>
+        <div class="service-card">
+          <div class="service-image"><i class="fas fa-palette"></i></div>
+          <div class="service-content">
+            <h3>UX/UI Design</h3>
+            <p>Research, prototypes, and design systems for accessible, high‑converting interfaces.</p>
+            <a class="service-btn" href="ux-ui-design-miami.html">Learn More</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section class="contact">
       <div class="section-header">
         <h2>Ready to start?</h2>
