--- a/services/desktop-apps-miami.html
+++ b/services/desktop-apps-miami.html
@@ -74,6 +74,17 @@
     ]
   }
   </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {"@type": "ListItem", "position": 1, "name": "Home", "item": "https://ux90.dev/"},
+      {"@type": "ListItem", "position": 2, "name": "Services", "item": "https://ux90.dev/#services"},
+      {"@type": "ListItem", "position": 3, "name": "Desktop Apps Miami", "item": "https://ux90.dev/services/desktop-apps-miami.html"}
+    ]
+  }
+  </script>
 </head>
 <body>
   <nav class="navbar">
@@ -95,6 +106,13 @@
   </nav>
 
   <main class="container">
+    <nav class="breadcrumb" aria-label="Breadcrumb" style="margin-top:96px;">
+      <ol>
+        <li><a href="../">Home</a></li>
+        <li><a href="../#services">Services</a></li>
+        <li aria-current="page">Desktop Applications Miami</li>
+      </ol>
+    </nav>
     <section class="hero" style="padding-top: 96px;">
       <h1>Desktop Applications Miami</h1>
       <p>Windows, macOS y Linux. Electron, .NET y Java con instaladores, firma, auto‑updates e integraciones.</p>
