--- a/services/ecommerce-miami.html
+++ b/services/ecommerce-miami.html
@@ -88,6 +88,17 @@
     ]
   }
   </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {"@type": "ListItem", "position": 1, "name": "Home", "item": "https://ux90.dev/"},
+      {"@type": "ListItem", "position": 2, "name": "Services", "item": "https://ux90.dev/#services"},
+      {"@type": "ListItem", "position": 3, "name": "E-commerce Miami", "item": "https://ux90.dev/services/ecommerce-miami.html"}
+    ]
+  }
+  </script>
 </head>
 <body>
   <nav class="navbar">
@@ -109,6 +120,13 @@
   </nav>
 
   <main class="container">
+    <nav class="breadcrumb" aria-label="Breadcrumb" style="margin-top:96px;">
+      <ol>
+        <li><a href="../">Home</a></li>
+        <li><a href="../#services">Services</a></li>
+        <li aria-current="page">E‑commerce Miami</li>
+      </ol>
+    </nav>
     <section class="hero" style="padding-top: 96px;">
       <h1>E‑commerce Miami</h1>
       <p>Shopify & WooCommerce stores built to convert. Fast, secure, and SEO‑ready for Miami and Hialeah businesses.</p>
