--- a/services/seo-miami.html
+++ b/services/seo-miami.html
@@ -92,6 +92,17 @@
     ]
   }
   </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {"@type": "ListItem", "position": 1, "name": "Home", "item": "https://ux90.dev/"},
+      {"@type": "ListItem", "position": 2, "name": "Services", "item": "https://ux90.dev/#services"},
+      {"@type": "ListItem", "position": 3, "name": "SEO Miami", "item": "https://ux90.dev/services/seo-miami.html"}
+    ]
+  }
+  </script>
 </head>
 <body>
   <nav class="navbar">
@@ -113,6 +124,13 @@
   </nav>
 
   <main class="container">
+    <nav class="breadcrumb" aria-label="Breadcrumb" style="margin-top:96px;">
+      <ol>
+        <li><a href="../">Home</a></li>
+        <li><a href="../#services">Services</a></li>
+        <li aria-current="page">SEO Miami</li>
+      </ol>
+    </nav>
     <section class="hero" style="padding-top: 96px;">
       <h1>SEO Miami</h1>
       <p>Local SEO strategies to rank in Google Maps and organic results. Built for Miami and Hialeah businesses.</p>
