--- a/services/ux-ui-design-miami.html
+++ b/services/ux-ui-design-miami.html
@@ -52,6 +52,17 @@
     ]
   }
   </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {"@type": "ListItem", "position": 1, "name": "Home", "item": "https://ux90.dev/"},
+      {"@type": "ListItem", "position": 2, "name": "Services", "item": "https://ux90.dev/#services"},
+      {"@type": "ListItem", "position": 3, "name": "UX/UI Design Miami", "item": "https://ux90.dev/services/ux-ui-design-miami.html"}
+    ]
+  }
+  </script>
 </head>
 <body>
   <nav class="navbar">
@@ -73,6 +84,13 @@
   </nav>
 
   <main class="container">
+    <nav class="breadcrumb" aria-label="Breadcrumb" style="margin-top:96px;">
+      <ol>
+        <li><a href="../">Home</a></li>
+        <li><a href="../#services">Services</a></li>
+        <li aria-current="page">UX/UI Design Miami</li>
+      </ol>
+    </nav>
     <section class="hero" style="padding-top: 96px;">
       <h1>UX/UI Design Miami</h1>
       <p>Investigación, prototipos y sistemas de diseño. Interfaces accesibles y enfocadas en conversión para web y apps.</p>
