--- a/index.html
+++ b/index.html
@@ -180,6 +180,15 @@
                 ]
             }
             </script>
+                <script type="application/ld+json">
+                {
+                    "@context": "https://schema.org",
+                    "@type": "BreadcrumbList",
+                    "itemListElement": [
+                        {"@type": "ListItem", "position": 1, "name": "Home", "item": "https://ux90.dev/"}
+                    ]
+                }
+                </script>
 </head>
 <body data-lang="en">
 
@@ -220,6 +229,11 @@
     <section id="home" class="hero">
         <div class="hero-container">
             <div class="hero-content">
+                <nav class="breadcrumb" aria-label="Breadcrumb">
+                    <ol>
+                        <li aria-current="page">Home</li>
+                    </ol>
+                </nav>
                 <h1 class="hero-title">
                     <span data-en="Professional Websites Hialeah | SEO & Design Experts" data-es="Websites Profesionales Hialeah | Expertos en SEO y Design">Professional Websites Hialeah | SEO & Design Experts</span>
                 </h1>
@@ -478,7 +492,7 @@
                             <li data-en="Miami Business App Solutions" data-es="Soluciones App Negocios Miami">Miami Business App Solutions</li>
                             <li data-en="Websites Integration Support" data-es="Soporte Integración Websites">Websites Integration Support</li>
                         </ul>
-                        <a href="#contact" class="service-btn" data-en="Learn More" data-es="Saber Más">Learn More</a>
+                        <a href="services/mobile-apps-miami.html" class="service-btn" data-en="Learn More" data-es="Saber Más">Learn More</a>
                     </div>
                 </div>
 
@@ -498,7 +512,39 @@
                             <li data-en="Payment Integration" data-es="Integración de Pagos">Payment Integration</li>
                             <li data-en="Inventory Management" data-es="Gestión de Inventario">Inventory Management</li>
                         </ul>
-                        <a href="#contact" class="service-btn" data-en="Learn More" data-es="Saber Más">Learn More</a>
+                        <a href="services/ecommerce-miami.html" class="service-btn" data-en="Learn More" data-es="Saber Más">Learn More</a>
+                    </div>
+                </div>
+            </div>
+            
+            <!-- Related Services on Home -->
+            <div class="section-header" style="margin-top: 2rem;">
+                <h2 data-en="Related services" data-es="Servicios relacionados">Related services</h2>
+                <p data-en="Quick links to our most requested services" data-es="Accesos rápidos a nuestros servicios más solicitados">Quick links to our most requested services</p>
+            </div>
+            <div class="services-grid">
+                <div class="service-card">
+                    <div class="service-image"><i class="fas fa-code"></i></div>
+                    <div class="service-content">
+                        <h3 data-en="Web Design Miami" data-es="Diseño Web Miami">Web Design Miami</h3>
+                        <p data-en="Custom, fast, SEO‑ready websites for Miami/Hialeah." data-es="Sitios personalizados, rápidos y listos para SEO en Miami/Hialeah.">Custom, fast, SEO‑ready websites for Miami/Hialeah.</p>
+                        <a href="services/web-design-miami.html" class="service-btn" data-en="Learn More" data-es="Saber Más">Learn More</a>
+                    </div>
+                </div>
+                <div class="service-card">
+                    <div class="service-image"><i class="fas fa-search"></i></div>
+                    <div class="service-content">
+                        <h3 data-en="SEO Miami" data-es="SEO Miami">SEO Miami</h3>
+                        <p data-en="Local SEO, technical fixes, and content to rank on Google." data-es="SEO local, mejoras técnicas y contenido para posicionar en Google.">Local SEO, technical fixes, and content to rank on Google.</p>
+                        <a href="services/seo-miami.html" class="service-btn" data-en="Learn More" data-es="Saber Más">Learn More</a>
+                    </div>
+                </div>
+                <div class="service-card">
+                    <div class="service-image"><i class="fas fa-palette"></i></div>
+                    <div class="service-content">
+                        <h3 data-en="UX/UI Design" data-es="Diseño UX/UI">UX/UI Design</h3>
+                        <p data-en="Research, prototyping, and design systems for better UX." data-es="Investigación, prototipos y sistemas de diseño para mejor UX.">Research, prototyping, and design systems for better UX.</p>
+                        <a href="services/ux-ui-design-miami.html" class="service-btn" data-en="Learn More" data-es="Saber Más">Learn More</a>
                     </div>
                 </div>
             </div>
@@ -730,7 +776,7 @@
                         <li><a href="services/mobile-apps-miami.html" data-en="Mobile Apps" data-es="Apps Móviles">Mobile Apps</a></li>
                         <li><a href="services/ux-ui-design-miami.html" data-en="UX/UI Design" data-es="Diseño UX/UI">UX/UI Design</a></li>
                         <li><a href="services/seo-miami.html" data-en="SEO Services" data-es="Servicios SEO">SEO Services</a></li>
-                        <li><a href="#services" data-en="E-commerce" data-es="E-commerce">E-commerce</a></li>
+                        <li><a href="services/ecommerce-miami.html" data-en="E-commerce" data-es="E-commerce">E-commerce</a></li>
                     </ul>
                 </div>
                 
